# genetic-algorithm

./: .gitignore  .projections.json  AGENTS.md  AGENTS_TEMPLATES.md  CHANGELOG.md  CHANGELOG_journey_summary.md  CHANGELOG_journey_to_associated_types.md  CHROMOSOME_RECYCLING_LOCATIONS.md  CLAUDE.md  COPYRIGHT.txt  Cargo.toml  LICENSE  MIGRATION.md  PLAN_ASSOCIATED_TYPE_MUTATE.md  PLAN_GENOTYPE_UTILITY_METHODS.md  PLAN_MEMORY_OPTIMIZATION_ELITE_SELECTION.md  PLAN_POPULATION_RECYCLING.md  README.md  alternative_gene_storage_analysis.md  associated_mutate_and_others.md  associated_types_final_plan.md  bitvec_reconsideration.md  chromosome_recycling_analysis.md  collapse_chromosome_simplification_plan.md  custom_mutate_fix_plan.md  distributed_chromosome_simplification_plan.md  distributed_vs_main_base_decision.md  final_architecture_decision.md  fitness_immutability_plan.md  heterogeneous_genotype_exploration.md  heterogeneous_genotype_implementation_plan.md  mutate_associated_types_analysis.md  mutate_associated_types_revised_analysis.md  performance.txt  population_recycling_implementation_plan.md  refactor_script.rb  refactoring_plan_v1.md  refactoring_plan_v2.md  refactoring_plan_v3.md  refactoring_plan_v4.md  (+13 more)
.github/workflows/: rust.yml
benches/: compete.rs  crossover.rs  evolve.rs  extension.rs  fitness.rs  genotype.rs  mutate.rs  neighbours.rs  playground.rs  population.rs  select.rs
benches/centralized/: crossover.rs  evolve.rs  extension.rs  fitness.rs  genotype.rs  mutate.rs  neighbours.rs  population.rs  select.rs
benches/distributed/: crossover.rs  evolve.rs  extension.rs  fitness.rs  genotype.rs  mutate.rs  neighbours.rs  population.rs  select.rs
examples/: centralized_evolve_static_binary.rs  distributed_evolve_nqueens_custom_mutate.rs  evolve_binary.rs  evolve_binary.rs.off  evolve_binary_arc_cache_fitness.rs  evolve_binary_cache_fitness.rs  evolve_binary_hash_cache_fitness.rs  evolve_binary_hashmap_cache_fitness.rs  evolve_binary_lru_cache_fitness.rs  evolve_binary_random.rs  evolve_bit_v_binary.rs  evolve_continuous.rs  evolve_continuous.rs.off  evolve_continuous_float.rs  evolve_continuous_integer.rs  evolve_continuous_random.rs  evolve_custom_extension.rs  evolve_discrete.rs  evolve_discrete_random.rs  evolve_index.rs  evolve_invalid.rs  evolve_invalid.rs.off  evolve_knapsack.rs  evolve_knapsack_binary.rs  evolve_knapsack_set.rs  evolve_large_genotype.rs  evolve_matrix_float.rs  evolve_milp.rs  evolve_milp_custom_mutate.rs  evolve_milp_diagonal_mutate.rs  evolve_monkeys.rs  evolve_multi_range.rs  evolve_names.rs  evolve_nqueens.rs  evolve_nqueens.rs.off  evolve_range_continuous.rs  evolve_range_discrete.rs  evolve_range_float.rs  evolve_range_integer.rs  evolve_scrabble.rs  (+47 more)
examples/centralized/: evolve_binary_arc_cache_fitness.rs  evolve_binary_cache_fitness.rs  evolve_binary_lru_cache_fitness.rs  evolve_bit_v_binary.rs  evolve_invalid.rs  evolve_knapsack.rs  evolve_milp.rs  evolve_monkeys.rs  evolve_nqueens.rs  evolve_range_float.rs  evolve_range_integer.rs  evolve_scrabble.rs  evolve_static_binary.rs  evolve_static_float.rs  evolve_static_integer.rs  evolve_static_matrix.rs  evolve_static_range.rs  evolve_static_v_dynamic_v_range.rs  evolve_table_seating.rs  explore_multithreading.rs  explore_strategies.rs  hill_climb_milp.rs  hill_climb_nqueens.rs  hill_climb_range.rs  hill_climb_recess.rs  hill_climb_scrabble.rs  hill_climb_table_seating.rs  permutate_knapsack.rs  permutate_range.rs  permutate_scrabble.rs  permutate_seed_genes_list.rs  permutate_tuple.rs  profile_evolve_binary.rs  profile_evolve_countdown.rs  profile_evolve_monkeys.rs  profile_evolve_nqueens.rs  profile_hill_climb_nqueens.rs
examples/distributed/: evolve_binary_arc_cache_fitness.rs  evolve_binary_cache_fitness.rs  evolve_binary_lru_cache_fitness.rs  evolve_bit_v_binary.rs  evolve_invalid.rs  evolve_knapsack.rs  evolve_milp.rs  evolve_monkeys.rs  evolve_nqueens.rs  evolve_range_float.rs  evolve_range_integer.rs  evolve_scrabble.rs  evolve_static_matrix.rs  evolve_static_range.rs  evolve_static_v_dynamic_v_range.rs  evolve_table_seating.rs  explore_multithreading.rs  explore_strategies.rs  hill_climb_milp.rs  hill_climb_nqueens.rs  hill_climb_range.rs  hill_climb_recess.rs  hill_climb_scrabble.rs  hill_climb_table_seating.rs  permutate_knapsack.rs  permutate_range.rs  permutate_scrabble.rs  permutate_seed_genes_list.rs  permutate_tuple.rs  profile_evolve_binary.rs  profile_evolve_countdown.rs  profile_evolve_monkeys.rs  profile_evolve_nqueens.rs  (+1 more)
examples_off/: evolve_continuous.rs  evolve_discrete.rs  evolve_invalid.rs  evolve_knapsack.rs  evolve_milp.rs  evolve_monkeys.rs  evolve_nqueens.rs  evolve_scrabble.rs  evolve_table_seating.rs  evolve_unique_discrete.rs  hill_climb_milp.rs  hill_climb_nqueens.rs  hill_climb_scrabble.rs  meta_evolve_binary.rs  meta_evolve_binary.rs.off  meta_evolve_milp.rs.off  meta_evolve_nqueens.rs.off  permutate_knapsack.rs  profile_evolve_binary.rs  profile_evolve_nqueens.rs  profile_permutate_binary.rs
src/: allele.rs  chromosome.rs  compete.rs  competition.rs  composite_genotype.rs  context.rs  crossover.rs  errors.rs  evolve.rs  evolve_builder.rs  evolve_config.rs  evolve_stats.rs  extension.rs  fitness.rs  gene.rs  genotype.rs  global_rand.rs  lib.rs  main.rs  mass_degeneration.rs  mass_extinction.rs  mass_genesis.rs  mass_invasion.rs  meta.rs  meta_config.rs  mutate.rs  mutation.rs  permutate.rs  permutate_builder.rs  permutate_config.rs  permutate_meta.rs  population.rs  select.rs  strategy.rs
tests/: build_test.rs  builders_test.rs  builders_test.rs.off  compete_test.rs  compete_test.rs.off  competition_test.rs  composite_genotype_test.rs  context_test.rs  crossover_test.rs  evolve_test.rs  extension_test.rs  fitness_test.rs  gene_test.rs  genotype_test.rs  main.rs  meta_test.rs  meta_test.rs.off  mod.rs  mutate_test.rs  mutate_test.rs.off  mutation_test.rs  permutate_test.rs  permutation_test.rs  permutation_test.rs.off  playground_test.rs  population_test.rs  population_test.rs.off  select_test.rs  strategy_test.rs  support_test.rs
(+459 files in other folders)
