[package]
name = "genetic_algorithm"
version = "0.10.3"
edition = "2021"
readme = "README.md"
description = "A genetic algorithm implementation"
repository = "https://github.com/basvanwesting/genetic-algorithm.git"
homepage = "https://github.com/basvanwesting/genetic-algorithm.git"
documentation = "https://docs.rs/genetic_algorithm/latest/genetic_algorithm"
license = "MIT OR Apache-2.0"
keywords = ["genetic", "ga"]
exclude = ["/.projections.json", "/performance.txt", "/refactor_script.rb", "/workspace.txt"]
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng", "alloc"] }
itertools = "0.10.3"
streaming-stats = "0.2.3"
factorial = "0.2.1"
num = "0.4.0"
rayon = "1.5.3"
thread_local = "1.1"
log = "0.4.0"
cardinality-estimator = "1.0.2"
impl-trait-for-tuples = "0.2.2"

[dev-dependencies]
lru = "0.7.5"
criterion = "0.5"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
distance = "0.4.0"
chrono = "0.4.22"
statrs = "0.16.0"
env_logger = "0.11.3"
approx = "0.5.1"

# for profiling and flamegraph
# [profile.release]
# debug = 1

[[bench]]
name = "fitness"
harness = false

[[bench]]
name = "compete"
harness = false

[[bench]]
name = "extension"
harness = false

[[bench]]
name = "mutate"
harness = false

[[bench]]
name = "crossover"
harness = false

[[bench]]
name = "genotype"
harness = false

[[bench]]
name = "evolve"
harness = false

[[bench]]
name = "neighbours"
harness = false

[[bench]]
name = "population"
harness = false
