[package]
name = "genetic_algorithm"
version = "0.20.5-cd.0"
edition = "2021"
readme = "README.md"
description = "A genetic algorithm implementation"
repository = "https://github.com/basvanwesting/genetic-algorithm.git"
homepage = "https://github.com/basvanwesting/genetic-algorithm.git"
documentation = "https://docs.rs/genetic_algorithm/latest/genetic_algorithm"
license = "MIT OR Apache-2.0"
keywords = ["genetic", "ga"]
exclude = ["/.projections.json", "/performance.txt", "/refactor_script.rb", "/workspace.txt"]
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng", "alloc"] }
itertools = "0.13.0"
streaming-stats = "0.2.3"
factorial = "0.4.0"
num = "0.4.0"
rayon = "1.10.0"
thread_local = "1.1.8"
log = "0.4.0"
cardinality-estimator = "1.0.2"
impl-trait-for-tuples = "0.2.2"
rustc-hash = "2.1.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
lru = "0.12.4"
nohash-hasher = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }
distance = "0.4.0"
chrono = "0.4.38"
statrs = "0.18.0"
env_logger = "0.11.5"
approx = "0.5.1"

# for profiling and flamegraph
# [profile.release]
# debug = 1

# Distributed benchmarks
[[bench]]
name = "distributed_fitness"
path = "benches/distributed/fitness.rs"
harness = false

[[bench]]
name = "distributed_select"
path = "benches/distributed/select.rs"
harness = false

[[bench]]
name = "distributed_extension"
path = "benches/distributed/extension.rs"
harness = false

[[bench]]
name = "distributed_mutate"
path = "benches/distributed/mutate.rs"
harness = false

[[bench]]
name = "distributed_crossover"
path = "benches/distributed/crossover.rs"
harness = false

[[bench]]
name = "distributed_genotype"
path = "benches/distributed/genotype.rs"
harness = false

[[bench]]
name = "distributed_evolve"
path = "benches/distributed/evolve.rs"
harness = false

[[bench]]
name = "distributed_neighbours"
path = "benches/distributed/neighbours.rs"
harness = false

[[bench]]
name = "distributed_population"
path = "benches/distributed/population.rs"
harness = false

# Centralized benchmarks
[[bench]]
name = "centralized_select"
path = "benches/centralized/select.rs"
harness = false

[[bench]]
name = "centralized_extension"
path = "benches/centralized/extension.rs"
harness = false

[[bench]]
name = "centralized_mutate"
path = "benches/centralized/mutate.rs"
harness = false

[[bench]]
name = "centralized_crossover"
path = "benches/centralized/crossover.rs"
harness = false

[[bench]]
name = "centralized_genotype"
path = "benches/centralized/genotype.rs"
harness = false

[[bench]]
name = "centralized_evolve"
path = "benches/centralized/evolve.rs"
harness = false

[[bench]]
name = "centralized_neighbours"
path = "benches/centralized/neighbours.rs"
harness = false

[[bench]]
name = "centralized_population"
path = "benches/centralized/population.rs"
harness = false

# Distributed examples
[[example]]
name = "distributed_evolve_binary_arc_cache_fitness"
path = "examples/distributed/evolve_binary_arc_cache_fitness.rs"

[[example]]
name = "distributed_evolve_binary_cache_fitness"
path = "examples/distributed/evolve_binary_cache_fitness.rs"

[[example]]
name = "distributed_evolve_binary_lru_cache_fitness"
path = "examples/distributed/evolve_binary_lru_cache_fitness.rs"

[[example]]
name = "distributed_evolve_invalid"
path = "examples/distributed/evolve_invalid.rs"

[[example]]
name = "distributed_evolve_knapsack"
path = "examples/distributed/evolve_knapsack.rs"

[[example]]
name = "distributed_evolve_milp"
path = "examples/distributed/evolve_milp.rs"

[[example]]
name = "distributed_evolve_monkeys"
path = "examples/distributed/evolve_monkeys.rs"

[[example]]
name = "distributed_evolve_nqueens"
path = "examples/distributed/evolve_nqueens.rs"

[[example]]
name = "distributed_evolve_range_float"
path = "examples/distributed/evolve_range_float.rs"

[[example]]
name = "distributed_evolve_range_integer"
path = "examples/distributed/evolve_range_integer.rs"

[[example]]
name = "distributed_evolve_scrabble"
path = "examples/distributed/evolve_scrabble.rs"

[[example]]
name = "distributed_evolve_table_seating"
path = "examples/distributed/evolve_table_seating.rs"

[[example]]
name = "distributed_explore_multithreading"
path = "examples/distributed/explore_multithreading.rs"

[[example]]
name = "distributed_explore_strategies"
path = "examples/distributed/explore_strategies.rs"

[[example]]
name = "distributed_hill_climb_milp"
path = "examples/distributed/hill_climb_milp.rs"

[[example]]
name = "distributed_hill_climb_nqueens"
path = "examples/distributed/hill_climb_nqueens.rs"

[[example]]
name = "distributed_hill_climb_range"
path = "examples/distributed/hill_climb_range.rs"

[[example]]
name = "distributed_hill_climb_recess"
path = "examples/distributed/hill_climb_recess.rs"

[[example]]
name = "distributed_hill_climb_scrabble"
path = "examples/distributed/hill_climb_scrabble.rs"

[[example]]
name = "distributed_hill_climb_table_seating"
path = "examples/distributed/hill_climb_table_seating.rs"

[[example]]
name = "distributed_permutate_knapsack"
path = "examples/distributed/permutate_knapsack.rs"

[[example]]
name = "distributed_permutate_range"
path = "examples/distributed/permutate_range.rs"

[[example]]
name = "distributed_permutate_scrabble"
path = "examples/distributed/permutate_scrabble.rs"

[[example]]
name = "distributed_permutate_seed_genes_list"
path = "examples/distributed/permutate_seed_genes_list.rs"

[[example]]
name = "distributed_permutate_tuple"
path = "examples/distributed/permutate_tuple.rs"

[[example]]
name = "distributed_profile_evolve_binary"
path = "examples/distributed/profile_evolve_binary.rs"

[[example]]
name = "distributed_profile_evolve_countdown"
path = "examples/distributed/profile_evolve_countdown.rs"

[[example]]
name = "distributed_profile_evolve_monkeys"
path = "examples/distributed/profile_evolve_monkeys.rs"

[[example]]
name = "distributed_profile_evolve_nqueens"
path = "examples/distributed/profile_evolve_nqueens.rs"

[[example]]
name = "distributed_profile_hill_climb_nqueens"
path = "examples/distributed/profile_hill_climb_nqueens.rs"

# Centralized examples
[[example]]
name = "centralized_evolve_invalid"
path = "examples/centralized/evolve_invalid.rs"

[[example]]
name = "centralized_evolve_knapsack"
path = "examples/centralized/evolve_knapsack.rs"

[[example]]
name = "centralized_evolve_static_float"
path = "examples/centralized/evolve_static_float.rs"

[[example]]
name = "centralized_evolve_static_integer"
path = "examples/centralized/evolve_static_integer.rs"

[[example]]
name = "centralized_evolve_static_binary"
path = "examples/centralized/evolve_static_binary.rs"

[[example]]
name = "centralized_hill_climb_range"
path = "examples/centralized/hill_climb_range.rs"

# Test configurations
[[test]]
name = "distributed_tests"
path = "tests/distributed/main.rs"

[[test]]
name = "centralized_tests"
path = "tests/centralized/main.rs"
